<resources>
    <string name="app_name">Traylz Mix</string>
    /* Starting Menu */
    <string name="start_button">Start Mapping!</string>
    <string name="find_button">Find Other Trails</string>
    <string name="about_button">About This App</string>
    /* Mapping Screen */
    <string name="finish_button">I\'m finished!</string>
    <string name="clear_button">Start Over</string>
    /* Upload Map Screen */
    <string name="cancel_button">Cancel Upload</string>
    <string name="cancel_warn">(This deletes your recorded trail!)</string>
    <string name="sample_name">My Trail</string>
    <string name="easy_trail">Easy Trail</string>
    <string name="medium_trail">Medium Trail</string>
    <string name="hard_trail">Hard Trail</string>
    <string name="walk_trail">Walking Trail</string>
    <string name="bike_trail">Biking Trail</string>
    <string name="horse_trail">Horse Trail</string>
    <string name="multi_trail">Multi Use</string>
    <string name="upload_button">Upload New Trail</string>
    /* Other Sh*t */
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapper">MapperActivity</string>
    <string name="title_activity_uploader">UploaderActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_nani_sore">NaniSoreActivity</string>
</resources>
