<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.traylz.traylzmix.UploaderActivity"
    android:background="#0088bb">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_button"
        android:id="@+id/uploadButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="uploadMap"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/cancelButton"
        android:layout_above="@+id/cancelWarn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="cancelUpload"
        android:layout_alignRight="@+id/cancelWarn"
        android:layout_alignEnd="@+id/cancelWarn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cancel_warn"
        android:id="@+id/cancelWarn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/uploadButton"
        android:layout_alignEnd="@+id/uploadButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEdit"
        android:layout_below="@+id/uploadButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/uploadButton"
        android:layout_alignEnd="@+id/uploadButton"
        android:text="@string/sample_name"
        android:inputType="text"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioOne">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_trail"
            android:id="@+id/easyRadio"
            android:checked="true" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_trail"
            android:id="@+id/mediumRadio" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_trail"
            android:id="@+id/hardRadio" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radioOne"
        android:id="@+id/radioTwo"
        android:layout_above="@+id/cancelButton">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walk_trail"
            android:id="@+id/walkRadio"
            android:checked="true" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bike_trail"
            android:id="@+id/bikeRadio" />


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horse_trail"
            android:id="@+id/horseRadio" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_trail"
            android:id="@+id/multiRadio" />

    </RadioGroup>

</RelativeLayout>
